WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218408
Usage of allWorkletGlobalScopesSet() in WorkletGlobalScope is not thread-safe
https://bugs.webkit.org/show_bug.cgi?id=218408
Summary
Usage of allWorkletGlobalScopesSet() in WorkletGlobalScope is not thread-safe
Chris Dumez
Reported
2020-10-30 17:06:46 PDT
Usage of allWorkletGlobalScopesSet() in WorkletGlobalScope is not thread-safe.
Attachments
Patch
(5.43 KB, patch)
2020-10-30 17:13 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(5.53 KB, patch)
2020-10-30 17:15 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.53 KB, patch)
2020-10-30 23:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-10-30 17:13:00 PDT
Created
attachment 412818
[details]
Patch
Chris Dumez
Comment 2
2020-10-30 17:15:05 PDT
Created
attachment 412819
[details]
Patch
Geoffrey Garen
Comment 3
2020-10-30 19:08:48 PDT
Comment on
attachment 412819
[details]
Patch r=me
EWS
Comment 4
2020-10-30 22:32:12 PDT
Found 2 new test failures: fast/css-custom-paint/constructor.html, fast/css-custom-paint/leaks.html
Chris Dumez
Comment 5
2020-10-30 23:07:53 PDT
Created
attachment 412833
[details]
Patch
EWS
Comment 6
2020-10-30 23:52:41 PDT
Committed
r269221
: <
https://trac.webkit.org/changeset/269221
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412833
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-10-30 23:53:20 PDT
<
rdar://problem/70910590
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug