Usage of allWorkletGlobalScopesSet() in WorkletGlobalScope is not thread-safe https://bugs.webkit.org/show_bug.cgi?id=218408

Reviewed by Geoff Garen.

The WorkletGlobalScope constructor / destructor were adding / removing themselves
in allWorkletGlobalScopesSet(), without locking. This used to be safe when we
only had paint worklets, because those are main-thread only. However,
AudioWorketGlobalScopes get constructed / destroyed on background thread so this
is no longer safe.

Since this is only used by Internals for layout tests to figure out how many
worklet instances are alive, I replaced the map with an std::atomic<unsigned>.

No new tests, found when running existing tests with GuardMalloc.

* testing/Internals.cpp:
(WebCore::Internals::isAnyWorkletGlobalScopeAlive const):
* worklets/WorkletGlobalScope.cpp:
(WebCore::WorkletGlobalScope::WorkletGlobalScope):
(WebCore::WorkletGlobalScope::~WorkletGlobalScope):
(WebCore::WorkletGlobalScope::numberOfWorkletGlobalScopes):
* worklets/WorkletGlobalScope.h:


Canonical link: https://commits.webkit.org/231080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269221 268f45cc-cd09-0410-ab3c-d52691b4dbfc